tests/ui/unstable-features/marker_trait_attr-feature-gate.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Foo<_>`:
  --> $DIR/marker_trait_attr-feature-gate.rs:8:1
   |
8  | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
...
15 | impl<T> Unpin for Foo<T> {}
   | ------------------------ first implementation here
